fixed row > (column with only row)

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
             <button onclick="testAll2()">Show storyboard 2 (row)</button>
             <button onclick="testAll3()">Show storyboard 3 (column)</button>
             <button onclick="testAll4()">Show storyboard 4 (column)</button>
-            <button onclick="rowWithOnlyColumn()">Show storyboard 4 (column, row with only column)</button>
+            <button onclick="columnRowWithOnlyColumn()">Show storyboard 4 (column, row with only column)</button>
+            <button onclick="rowColWithOnlyRow()">Show storyboard 5 (row, col with only row)</button>
             <button onclick="columnIncrease()">Column grow</button>
+            <button onclick="rowIncrease()">Row grow (column with only row)</button>
             <button onclick="drawRow()">Adjust row</button>
             <button onclick="drawCol()">Adjust column</button>
             <label for="width">Width:</label>
