--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="images" style="margin: 20px;">
 <!--            <img src='https://t4.ftcdn.net/jpg/00/97/58/97/360_F_97589769_t45CqXyzjz0KXwoBZT9PRaWGHRk5hQqQ.jpg' id="hui"/>-->
         </div>
-        <script src="index.js"></script>
+        <script src="index3.js"></script>
     </div>
 </body>
 </html>
