implemented padding and fixed bugs

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <button onclick="rowColWithOnlyRow()">Show storyboard 5 (row, col with only row)</button>
             <button onclick="columnIncrease()">Column grow</button>
             <button onclick="rowIncrease()">Row grow (column with only row)</button>
+            <button onclick="rowPadding()">Row paddings</button>
             <button onclick="drawRow()">Adjust row</button>
             <button onclick="drawCol()">Adjust column</button>
             <label for="width">Width:</label>
