--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         </div>
         <div id="images" style="margin: 20px;">
         </div>
+        <script src="image.js"></script>
+        <script src="getFrameMethods.js"></script>
+        <script src="column.js"></script>
+        <script src="row.js"></script>
         <script src="index.js"></script>
     </div>
 </body>
